BC1-120-fix: Improved responsive design; resolved layout issues on various screen sizes

--- a/blog/scss/_typography.scss
+++ b/blog/scss/_typography.scss
@@ -55,30 +55,18 @@ html {
   }
 
   /*--------------------------------
-	*** LAPTOP OR DESKTOP 
-	**	MIN-WIDTH : 1400px OR 87.5em
-	*/
-
-  @include led {
-    // font-size: 1rem;
-  }
-
-  /*--------------------------------
-	*** FOR SOM OF THE DEVICES
-	**	MIN-WIDTH : 1201px OR 75.0625em
-	*/
-
-  @include lcd {
-    font-size: 1.5rem;
-  }
-
-  /*--------------------------------
 	*** FOR ANY DEVICE MAX SIZE UNTIL
 	**	MAX-WIDTH : 1200px OR 75em
 	*/
 
   @include laptop {
     font-size: 1rem;
+
+    body {
+      .hr {
+        width: 47rem;
+      }
+    }
   }
 
   /*--------------------------------
@@ -88,24 +76,15 @@ html {
 
   @include miniLaptop {
     font-size: 1rem;
-  }
-
-  /*--------------------------------
-	*** FOR ANY DEVICE MAX SIZE UNTIL
-	**	MAX-WIDTH : 992px OR 62em
-	*/
-
-  @include tablet {
-    font-size: 1.5rem;
 
     body {
-      .hr,
-      hr {
-        width: 20rem;
-        display: block;
+      .hr {
+        width: 27rem;
       }
 
       hr {
+        display: block;
+        width: 32rem;
         top: -2.5rem;
         position: relative;
       }
@@ -113,29 +92,79 @@ html {
   }
 
   /*--------------------------------
-	*** FOR RETINA MOBILE AND LANSCAPE
-	**	MIN : 500px / 31.25em | MAX : 767PX / 47.9375em
-	*/
-
-  @include retinaMobile {
-    font-size: 0.7rem;
-  }
-
-  /*--------------------------------
-	*** FOR MOBILE
-	**	MAX : 640PX / 40em
-	*/
-
-  @include mobile {
-    font-size: 1rem;
-  }
-
-  /*--------------------------------
-	*** FOR MINI MOBILE
-	**	MAX : 400PX / 25em
-	*/
-
+  *** FOR MINI MOBILE
+  **	MAX : 400PX / 25em
+  --------------------------------*/
   @include miniMobile {
     font-size: 0.8rem;
+
+    body {
+      .hr {
+        width: 18rem;
+      }
+
+      hr {
+        width: 19.5rem;
+        display: block;
+      }
+    }
+  }
+
+  /*--------------------------------
+  *** FOR MOBILE
+  **	MAX : 640PX / 40em
+  --------------------------------*/
+  @include mobile {
+    @media (min-width: 401px) and (max-width: 640px) {
+      font-size: 1rem;
+
+      body {
+        .hr {
+          width: 20rem;
+        }
+
+        hr {
+          width: 23rem;
+          display: block;
+        }
+      }
+    }
+  }
+
+  /*--------------------------------
+  *** FOR RETINA MOBILE AND LANDSCAPE
+  **	MIN : 500px / 31.25em | MAX : 767PX / 47.9375em
+  --------------------------------*/
+  @include retinaMobile {
+    @media (min-width: 641px) and (max-width: 767px) {
+      font-size: 0.7rem;
+
+      .hr {
+        width: 16rem !important;
+      }
+    }
+  }
+
+  /*--------------------------------
+  *** FOR TABLET
+  **	MAX-WIDTH : 992px OR 62em
+  --------------------------------*/
+  @include tablet {
+    @media (min-width: 768px) and (max-width: 992px) {
+      font-size: 1.5rem;
+
+      body {
+        .hr {
+          width: 17.5rem;
+          display: block;
+        }
+
+        hr {
+          width: 21rem;
+          top: -2.5rem;
+          position: relative;
+        }
+      }
+    }
   }
 }
