--- a/blog/scss/layout/_topics.scss
+++ b/blog/scss/layout/_topics.scss
@@ -78,6 +78,57 @@
   \*========================================================================================*/
 
   /*--------------------------------
+  *** FOR SOM OF THE DEVICES
+  **	MIN-WIDTH : 1201px OR 75.0625em
+  */
+
+  @include lcd {
+    .container {
+      .more-topics {
+        .topic {
+          a {
+            width: 13.38rem;
+          }
+        }
+      }
+    }
+  }
+
+  /*--------------------------------
+  *** LAPTOP OR DESKTOP 
+  **	MIN-WIDTH : 1400px OR 87.5em
+  */
+
+  @include led {
+    .container {
+      .more-topics {
+        .topic {
+          a {
+            width: 15.95rem;
+          }
+        }
+      }
+    }
+  }
+
+  /*--------------------------------
+  *** 4K AND HIGH RESOULOTIONS 
+  **	MIN-WIDTH : 2560px OR 160em
+  */
+
+  @include led4k {
+    .container {
+      .more-topics {
+        .topic {
+          a {
+            width: 14.4rem;
+          }
+        }
+      }
+    }
+  }
+
+  /*--------------------------------
 	*** FOR ANY DEVICE MAX SIZE UNTIL
 	**	MAX-WIDTH : 1200px OR 75em
 	*/
@@ -86,7 +137,9 @@
     .container {
       .more-topics {
         .topic {
-          justify-content: center;
+          a {
+            width: 13.3rem;
+          }
         }
       }
     }
@@ -99,13 +152,11 @@
 
   @include miniLaptop {
     .container {
-      p {
-        padding: 1.4375rem nth($spaces, 30) 2.7rem nth($spaces, 30);
-      }
-
       .more-topics {
         .topic {
-          justify-content: center;
+          a {
+            width: 11rem;
+          }
         }
       }
     }
